compiler/src/test/resources/golden/errors/eff_helper_missing_io.dawn
use std/io

fn load() -> String = io.read_file("a.txt")
