compiler/src/test/resources/golden/errors/eff_helper_missing_io.err
error: function `load` declares return type String but its body is Result[String, String]
  --> eff_helper_missing_io.dawn:3:23
  |
3 | fn load() -> String = io.read_file("a.txt")
  |                       ^^^^^^^^^^^^^^^^^^^^^
error: function `load` is not declared !io but calls `read_file` (!io)
  --> eff_helper_missing_io.dawn:3:26
  |
3 | fn load() -> String = io.read_file("a.txt")
  |                          ^^^^^^^^^
  = hint: add !io to the end of the signature, or remove the call
